fix: modal select overflow

--- a/pokinder-frontend/src/component/atom/Modal/Modal.module.css
+++ b/pokinder-frontend/src/component/atom/Modal/Modal.module.css
@@ -14,7 +14,7 @@
 }
 
 .modal {
-  max-height: 75%;
+  max-height: 80%;
   overflow-y: auto;
   cursor: default;
   padding: var(--spacing-2XL);
